--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
+    "cookie": "^1.1.1",
     "formik": "^2.4.6",
     "i": "^0.3.7",
     "next": "^15.5.9",
